# hdulib-memory

./: .env.example  .gitattributes  .gitignore  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  web_app.py
docs/: memory-persona-examples.html  memory-report-design-notes.md  memory-report-preview.html
utils/: api_client.py  browser_auth.py  config.py  config.toml  memory.py  models.py
