[project]
name = "hdulib-memory"
version = "0.1.0"
description = "A non-official H5 memory report generator for library booking history data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
browser = ["playwright>=1.45.0"]

[tool.ruff]
target-version = "py311"
line-length = 100

